<resources>
    <string name="app_name">GoLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_alarm">New study session</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="endDate">End Date</string>
    <string name="description">Description</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="confirm">Confirm</string>
    <string name="facebook_app_id">954110837935466</string>
    <string name="remove">remove</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="APPLICATION_VERSION">ApplicationVersion</string>
    <string name="background">background</string>
    <string name="title_welcome_activity">Welcome</string>
    <string name="cancellation_left">Cancellation left:</string>
    <string name="NUM_OF_QUOTAS">NUM_OF_QUOTAS</string>
    <string name="CURRENT_STREAK">CURRENT_STREAK</string>
</resources>
